--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,54 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "react-scripts start",
     "web": "react-scripts start",
     "build": "react-scripts build",
     "ios": "react-native run-ios",
     "android": "react-native run-android",
     "test": "jest --coverage",
     "watch": "jest --watch",
+    "gen:types": "graphql-codegen --config codegen.yml",
+    "gen:types:watch": "yarn gen:types --watch",
     "lint": "tsc && tslint --fix -p tsconfig.json -c tslint.json",
+    "precommit": "pretty-quick --staged",
     "reset": "watchman watch-del-all; rm -rf /tmp/metro-bundler-cache-*; rm -rf ./android/build; rm -rf ./android/.gradle; rm -rf ./android/app/build; rm -rf ~/Library/Developer/Xcode/DerivedData; rm -rf /tmp/haste-map-react-native-packager-*; rm -rf ./ios/build; yarn install; pod install --project-directory=ios; react-native start --reset-cache"
   },
   "dependencies": {
+    "@accounts/apollo-link": "^0.15.0",
+    "@accounts/client": "^0.15.0",
+    "@accounts/client-password": "^0.15.0",
+    "@accounts/graphql-client": "^0.15.0",
+    "apollo-boost": "^0.4.0",
+    "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.4",
     "react": "16.8.6",
+    "react-apollo": "^2.5.6",
+    "react-apollo-hooks": "^0.4.5",
     "react-dom": "16.8.6",
     "react-native": "0.59.5",
     "react-native-web": "0.11.2",
-    "react-scripts": "3.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-router-native": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.2.0",
+    "@graphql-codegen/typescript": "^1.2.0",
+    "@graphql-codegen/typescript-operations": "^1.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^1.2.0",
     "@types/jest": "24.0.12",
     "@types/react": "16.8.15",
     "@types/react-native": "0.57.51",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-native": "^4.2.4",
     "@types/react-test-renderer": "16.8.1",
     "babel-jest": "24.7.1",
+    "husky": "^2.3.0",
     "jest": "24.7.1",
-    "prettier": "1.17.0",
+    "prettier": "^1.17.1",
+    "pretty-quick": "^1.11.0",
     "react-art": "16.8.6",
     "react-test-renderer": "16.8.6",
     "ts-jest": "24.0.2",
@@ -70,5 +94,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
