--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/react-router-native": "^4.2.4",
     "@types/react-test-renderer": "16.8.1",
+    "@types/styled-components": "^4.1.15",
     "babel-jest": "24.7.1",
     "husky": "^2.3.0",
     "jest": "24.7.1",
