refactor Login. use css vars for colors

--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "16.8.6",
     "react-native": "0.59.5",
-    "react-native-web": "0.11.2",
+    "react-native-web": "^0.11.4",
     "react-router-dom": "^5.0.0",
     "react-router-native": "^5.0.0",
     "react-scripts": "3.0.0",
