set up most of home screen ui. fix fonts

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@accounts/client": "^0.13.0",
     "@accounts/client-password": "^0.13.0",
     "@accounts/graphql-client": "^0.13.0",
+    "@rebass/grid": "^6.0.0",
     "apollo-boost": "^0.4.0",
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
@@ -47,6 +48,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/react-router-native": "^4.2.4",
     "@types/react-test-renderer": "16.8.1",
+    "@types/rebass__grid": "^6.0.5",
     "@types/styled-components": "^4.1.15",
     "babel-jest": "24.7.1",
     "husky": "^2.3.0",
