--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "16.8.6",
+    "react-load-script": "^0.0.6",
     "react-native": "0.59.5",
     "react-native-web": "^0.11.4",
     "react-router-dom": "^5.0.0",
