fix nodemon issue. remove unused user fields

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "watch": "nodemon -e ts -w ./src -x npm run watch:serve",
-    "watch:serve": "ts-node --inspect src/index.ts"
+    "watch:serve": "ts-node src/index.ts"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.5",
