--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "graphql": "^14.3.1",
     "graphql-toolkit": "^0.2.14",
     "mongoose": "^5.5.12",
+    "plaid": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.4",
     "typegoose": "^5.6.0"
