update repo in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fullstack-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:TrillCyborg/onefraction.git",
+  "repository": "git@github.com:TrillCyborg/fullstack.git",
   "author": "Jason Werner <jason@trxrg.com>",
   "license": "MIT",
   "private": false
