chore(docker): remove env vars defined in Dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,21 +1,17 @@
-# Use an official Python runtime as a parent image
+# Use an official Node runtime as a parent image
 FROM node:12.6.0
 
-ENV SERVER_PORT=4000
-ENV DB_NAME=propbet
-ENV ACCOUNTS_SECRET=secret
-ENV MONGO_HOST=0.0.0.0
-
 # Set the working directory to /
-WORKDIR /
+WORKDIR /usr/src/app
 
-# Copy the current directory contents into the container at /app
-COPY . /
+# Copy the current directory contents into the container at /user/src/app
+COPY . .
 
-# Install any needed packages specified in requirements.txt
+# Install dependencies
 RUN yarn
 
+# Expose port for external use
 EXPOSE 4000
 
-# Run app.py when the container launches
+# Run server
 CMD ["yarn", "watch"]
